--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,8 +1,26 @@
 """Measures remote build execution API (REAPI) traffic and exports stats to Prometheus."""
 module(name = "com_github_minorhacks_rbe_meter")
 
+bazel_dep(name = "com_github_buildbarn_bb_storage")
 bazel_dep(name = "gazelle", version = "0.37.0")
+bazel_dep(name = "googleapis", version = "0.0.0-20240326-1c8d509c5")
 bazel_dep(name = "rules_go", version = "0.48.1")
+
+git_override(
+    module_name = "com_github_buildbarn_bb_storage",
+    commit = "221b6361e1782acb258afc37f4a8642ac333e301",
+    remote = "https://github.com/buildbarn/bb-storage.git",
+)
+
+git_override(
+    module_name = "gazelle",
+    commit = "4d0129d7adae33e8e648d3624aff8fa8f93f375b",
+    patches = [
+        "//:patches/gazelle/dont_flatten_srcs.diff",
+        "//:patches/gazelle/googleapis.diff",
+    ],
+    remote = "https://github.com/bazelbuild/bazel-gazelle.git",
+)
 
 go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
 go_sdk.download(version = "1.22.5")
@@ -12,4 +30,29 @@ go_deps.from_file(go_mod = "//:go.mod")
 
 use_repo(
     go_deps,
+    "com_github_bazelbuild_remote_apis",
+    "org_golang_google_grpc",
+    "org_golang_google_genproto_googleapis_bytestream",
+)
+
+go_deps_dev = use_extension("@gazelle//:extensions.bzl", "go_deps", dev_dependency = True)
+
+go_deps_dev.gazelle_override(
+    build_file_generation = "on",
+    directives = [
+        "gazelle:go_grpc_compilers @io_bazel_rules_go//proto:go_proto,@io_bazel_rules_go//proto:go_grpc_v2",
+        "gazelle:resolve proto go build/bazel/semver/semver.proto //build/bazel/semver",
+        "gazelle:resolve proto go google/api/annotations.proto @org_golang_google_genproto_googleapis_api//annotations",
+        "gazelle:resolve proto go google/longrunning/operations.proto @com_google_cloud_go_longrunning//autogen/longrunningpb",
+        "gazelle:resolve proto go google/rpc/status.proto @org_golang_google_genproto_googleapis_rpc//status",
+        "gazelle:resolve proto google/api/annotations.proto @googleapis//google/api:annotations_proto",
+        "gazelle:resolve proto google/longrunning/operations.proto @googleapis//google/longrunning:operations_proto",
+        "gazelle:resolve proto google/rpc/status.proto @googleapis//google/rpc:status_proto",
+    ],
+    path = "github.com/bazelbuild/remote-apis",
+)
+
+go_deps_dev.module_override(
+    patches = ["//:patches/org_golang_google_genproto_googleapis_bytestream/service_registrar.diff"],
+    path = "google.golang.org/genproto/googleapis/bytestream",
 )
