Measures FindMissingBlob hits/misses

--- a/cmd/rbe_meter/BUILD.bazel
+++ b/cmd/rbe_meter/BUILD.bazel
@@ -13,6 +13,10 @@ go_library(
         "@com_github_buildbarn_bb_storage//pkg/program",
         "@com_github_buildbarn_bb_storage//pkg/proto/configuration/grpc",
         "@com_github_buildbarn_bb_storage//pkg/util",
+        "@com_github_prometheus_client_golang//prometheus",
+        "@com_github_prometheus_client_golang//prometheus/collectors",
+        "@com_github_prometheus_client_golang//prometheus/push",
+        "@com_github_prometheus_common//expfmt",
         "@org_golang_google_genproto_googleapis_bytestream//:bytestream",
         "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//codes",
