--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -31,8 +31,11 @@ go_deps.from_file(go_mod = "//:go.mod")
 use_repo(
     go_deps,
     "com_github_bazelbuild_remote_apis",
+    "com_github_prometheus_client_golang",
+    "com_github_prometheus_common",
     "org_golang_google_grpc",
     "org_golang_google_genproto_googleapis_bytestream",
+    "com_github_golang_protobuf",
 )
 
 go_deps_dev = use_extension("@gazelle//:extensions.bzl", "go_deps", dev_dependency = True)
