--- a/pkg/metered/BUILD.bazel
+++ b/pkg/metered/BUILD.bazel
@@ -1,9 +1,9 @@
 load("@rules_go//go:def.bzl", "go_library")
 
 go_library(
-    name = "proxying",
-    srcs = ["proxying.go"],
-    importpath = "github.com/minorhacks/rbe_meter/pkg/proxying",
+    name = "metered",
+    srcs = ["server.go"],
+    importpath = "github.com/minorhacks/rbe_meter/pkg/metered",
     visibility = ["//visibility:public"],
     deps = [
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
